--- a/404.html
+++ b/404.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 	<head>
-		<meta charset="utf-8"/>
+		<meta charset="UTF-8"/>
+		<meta name="robots" content="noindex,nofollow"/>
 		<title>Tonado</title>
 		<script type="text/javascript">const pathSegmentsToKeep = 0;
 
