--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
  }
  })(window.location);</script>
 		<link id="prime-vue-theme-link" rel="stylesheet" href="/primevue/resources/themes/lara-light-indigo/theme.css"/>
-		<script type="module" crossorigin src="/4747daa418b45525.js"></script>
-		<link rel="stylesheet" href="/assets/1dca11bff3df36b1.css"/>
+		<script type="module" crossorigin src="/assets/ab925cad74e5f63c.js"></script>
+		<link rel="stylesheet" href="/assets/c5a24d50e39eba13.css"/>
 		<link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
 	</head>
 	<body>
