--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<link rel="shortcut icon" href="/favicon.svg"/>
 		<link rel="icon" href="/favicon.ico" sizes="32x32"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta name="description" lang="de" content="'&#9835; Coverband aus Wolkersdorf und Umgebung &#9835;'"/>
+		<meta name="description" lang="de" content="&#9835; Coverband aus Wolkersdorf und Umgebung &#9835;"/>
 		<meta property="og:title" content="Tonado"/>
-		<meta property="og:description" content="'&#9835; Coverband aus Wolkersdorf und Umgebung &#9835;'"/>
+		<meta property="og:description" content="&#9835; Coverband aus Wolkersdorf und Umgebung &#9835;"/>
 		<meta property="og:image" content="https://dev.tonado.at/logo_x600.jpg"/>
 		<meta property="og:image:alt" content="Tonado Logo"/>
 		<meta property="og:url" content="https://dev.tonado.at"/>
